--- a/giftApp/package.json
+++ b/giftApp/package.json
@@ -10,8 +10,13 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/slider": "4.1.3",
+    "@types/react-native-vector-icons": "6.4.8",
     "react": "17.0.2",
-    "react-native": "0.65.1"
+    "react-native": "0.65.1",
+    "react-native-reanimated": "2.3.0-alpha.2",
+    "react-native-rss-parser": "1.5.1",
+    "react-native-vector-icons": "8.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
